--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 /node_modules
 /public/hot
-/public/storage
+#/public/storage
+
+#whitelist storage
+!public/
+!public/storage/
+!public/storage/app/
+!public/storage/app/public/
+!public/storage/app/public/*
+
 /storage/*.key
 /vendor
 .env
