--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,6 @@
 /node_modules
 /public/hot
-#/public/storage
-
-#whitelist storage
-!public/
-!public/storage/
-!public/storage/app/
-!public/storage/app/public/
-!public/storage/app/public/*
-
+/public/storage
 /storage/*.key
 /vendor
 .env
