--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,13 @@
         "realrashid/sweet-alert": "^3.2",
         "simplesoftwareio/simple-qrcode": "^4.1",
         "spatie/laravel-permission": "^3.18",
+        "staudenmeir/belongs-to-through": "^2.11",
+        "staudenmeir/eloquent-has-many-deep": "^1.13",
         "willvincent/laravel-rateable": "^2.3",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.5",
         "barryvdh/laravel-ide-helper": "^2.9",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
