--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "beyondcode/laravel-websockets": "^1.11",
         "diglactic/laravel-breadcrumbs": "^6.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
@@ -19,6 +20,7 @@
         "laravel/ui": "^3.1",
         "laravolt/indonesia": "^0.28.0",
         "proengsoft/laravel-jsvalidation": "^4.4",
+        "pusher/pusher-php-server": "^5.0",
         "realrashid/sweet-alert": "^3.2",
         "simplesoftwareio/simple-qrcode": "^4.1",
         "spatie/laravel-permission": "^3.18",
